Fix tab height on Firefox (#392)
The tab (Code, Config, Dependencies) is unnecessarily high, including extra margin, only on Firefox.
It's not a problem on Chrome or Safari.

--- a/src/demo.css
+++ b/src/demo.css
@@ -157,7 +157,7 @@
 }
 
 .sd-input-tabs {
-	inline-size: min-content;
+	inline-size: max-content;
 }
 
 .sd-output-tabs {
